--- a/pong.kv
+++ b/pong.kv
@@ -1,6 +1,15 @@
 #:kivy 1.0.9
 
+<PongBall>:
+    size: 50, 50
+    canvas:
+        Ellipse:
+            pos: self.pos
+            size: self.size
+
 <PongGame>:
+    ball: pong_ball
+
     canvas:
         Rectangle:
             pos: self.center_x - 5, 0
@@ -17,3 +26,7 @@
         center_x: root.width * 3 /4
         top: root.top - 50
         text: "0"
+
+    PongBall:
+        id: pong_ball
+        center: self.parent.center
